--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
   }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Roboto, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: rgb(45, 43, 43);
 }
 
@@ -127,7 +127,7 @@ li {
     padding: 90px 0;
 }
 
-.inspiring-quote p {
+.inspiring-quote .inspiring-text {
     text-align: left;
     max-width: 750px;
     font-size: 36px;
@@ -140,7 +140,9 @@ li {
     text-align: right;
     font-size: 22px;
     font-weight: bolder;
-    font-style: normal;
+    display: flex;
+    align-self: flex-end;
+    margin-right: 150px;
 }
 
 .call-to-action {
